# 5e

./: CMakeLists.txt  main.c
string/: string_.c  string_.h
string/tasks/: digitForSpaces.c  forWordInString.c  getCountPalindromes.c  getStringOfWordsOtherThanLast.c  getWordBeforeFirstWordWithA.c  getWordPrecedingFirstOccurrenceOfWInString1.c  isOrderedString.c  isUniqueWordInString.c  isWordInString.c  isWordIyStringMadeUpOfUniqueChar.c  lastWordString1ThatInString2.c  mergeStrings.c  outputWordForReversOrdered.c  padSmallerString.c  removeAdjacentEqualLetters.c  removeNonLetters.c  removingWordsFromString.c  replace.c  reverseWordOrder.c
string/test/: test.c  test.h
